--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
-    "redux-freeze": "^0.1.7"
+    "redux-freeze": "^0.1.7",
+    "npm-run-all": "^4.1.5"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/styles/main.scss -o public/css/",
@@ -33,7 +34,6 @@
   ],
   "devDependencies": {
     "node-sass-chokidar": "^1.3.4",
-    "npm-run-all": "^4.1.5",
     "redux-thunk": "^2.3.0"
   }
 }
